  synchronisation.
+ rfe #2988633 [relation] Improve ON DELETE/ON UPDATE drop-downs
+ rfe #2988629 [relation] Improve labels in relation view 
+ rfe #2983207, patch #2988715 [interface] Use jQuery calendar dialog, thanks
  to Muhammad Adnan.
+ [doc] Incorporate synchronisation docs into main document.
+ [core] Include Content Security Policy HTTP headers.

3.3.4.0 (not yet released)
- bug #2996161 [import] properly escape import value
- bug #2998889 [import] Import button does not work in Catalan
- [browse] Fix handling of sort order if only column is specified.
+ [lang] Greek update, thanks to Panagiotis Papazoglou - panos78

3.3.3.0 (2010-05-10)
- patch #2982480 [navi] Do not group if there would be one table in group,
  thanks to Lorikeet Lee.
- patch #2983492 [sync] When asking to synchronize Structure and Data,
  only Structure is done, thanks to Ankit Gupta - ankitgupta3
- patch #2984893 [engines] InnoDB storage page emits a warning,
  thanks to Madhura Jayaratne - madhuracj
- bug #2974687, bug #2974692 [compatibility] PHPExcel : IBM AIX iconv() does not work,
  thanks to Björn Wiberg - bwiberg
- bug #2983066 [interface] Flush table on table operations shows the query twice, 
  thanks to Martynas Mickevičius - BlinK_
- bug #2983060, patch #2987900 [interface] Fix initial state of tables in
  designer, thanks to Sutharshan Balachandren.
- bug #2983062, patch #2989408 [engines] Fix warnings when changing table
  engine to Maria, thanks to Madhura Jayaratne.
- bug #2974067 [display] non-binary fields shown as hex
- bug #2983065 [operations] Error when changing from Maria to MyISAM engine
- bug #2975408 [tracking] Data too long for column data_sql
- bug [tracking] Tracking report should obey MaxCharactersInDisplayedSQL 
- bug [edit] Avoid selecting UNHEX function by default for a BLOB column for
  which editing is protected
- bug #2994168 [structure] Show auto_increment in uppercase 
- bug #2993970 [pdf schema] Page numbering in Table of Contents 
