@@ -81,6 +81,7 @@ $Id$
   to Muhammad Adnan.
 + [doc] Incorporate synchronisation docs into main document.
 + [core] Include Content Security Policy HTTP headers.
+- bug #3004216 [CSS] Field attributes use inline CSS
 
 3.3.4.0 (not yet released)
 - bug #2996161 [import] properly escape import value
